# dcm_ball_detector

./: .gitignore  MANIFEST.in  README.md  auto_upload.sh  pyproject.toml
data_sample/2023_01_03_0.625 x 0.625_501/: 00000001.dcm  00000002.dcm  00000003.dcm  00000004.dcm  00000005.dcm  00000006.dcm  00000007.dcm  00000008.dcm  00000009.dcm  00000010.dcm  00000011.dcm  00000012.dcm  00000013.dcm  00000014.dcm  00000015.dcm  00000016.dcm  00000017.dcm  00000018.dcm  00000019.dcm  00000020.dcm  00000021.dcm  00000022.dcm  00000023.dcm  00000024.dcm  00000025.dcm  00000026.dcm  00000027.dcm  00000028.dcm  00000029.dcm  00000030.dcm  00000031.dcm  00000032.dcm  00000033.dcm  00000034.dcm  00000035.dcm  00000036.dcm  00000037.dcm  00000038.dcm  00000039.dcm  00000040.dcm  (+476 more)
data_sample/SE3/: 000000.dcm  000001.dcm  000002.dcm  000003.dcm  000004.dcm  000005.dcm  000006.dcm  000007.dcm  000008.dcm  000009.dcm  000010.dcm  000011.dcm  000012.dcm  000013.dcm  000014.dcm  000015.dcm  000016.dcm  000017.dcm  000018.dcm  000019.dcm  000020.dcm  000021.dcm  000022.dcm  000023.dcm  000024.dcm  000025.dcm  000026.dcm  000027.dcm  000028.dcm  000029.dcm  000030.dcm  000031.dcm  000032.dcm  000033.dcm  000034.dcm  000035.dcm  000036.dcm  (+152 more)
dcm_ball_detector/: __init__.py  __main__.py  advanced_box_method.py  advanced_box_method_test.py  arc_mask.py  calibration.py  circ_utils.py  convolve_utils.py  cube_get.py  cube_get_test.py  dcm_interface.py  dcm_relevant_test.py  flood_fill.py  gen_circ.py  image_log.py  matplotlib_utils.py  matrix_man.py  os_interface.py  stderr_log.py  svm_utils.py
